# digital_image_processing

./: .gitignore  2023_8_28.txt  CMakeLists.txt  README.md  problem.c
include/: Untitled-1.ini  general.h
src/: general.cpp  main.cpp
